--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Background Generator</h1>
     <input class="color1" type="color" name="color1" value="#00bfff">
     <input class="color2" type="color" name="color2" value="#ff4000">
-    <h2>Current CSS Background</h2>
+    <h2>Your current CSS Background</h2>
     <h3></h3>
     <script src="script.js" async defer>
     </script>
